--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     let recognition;
     let isListening = false;
     const translationCache = {};
-    const GAS_URL = 'TU_URL_DEL_SCRIPT_DE_GAS'; // Reemplazar con tu URL de GAS
+    const GAS_URL = 'https://script.google.com/macros/s/AKfycbxDeK6nCRfY4wCanumvGXn5SjtROxCbmhL6RGG0XNqjVWkZ8cPtxdcxD5OSBTRP1y7T/exec'; // Reemplazar con tu URL de GAS
 
     // Inicializar reconocimiento de voz
     function initSpeechRecognition() {
